[tool.poetry]
name = "ml-env"
version = "0.1.0"
description = ""
authors = ["Alex Chalk <contact@alexchalk.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastai = "^2.7.15"
gradio = "^4.32.0"
watchfiles = "^0.21.0"
nbdev = "^2.3.23"
numpy = "^1.26.4"
ipykernel = "^6.29.4"
ipywidgets = "^8.1.3"
jupyterlab-rise = "^0.42.0"
jupyterlab-vim = "^4.1.3"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
lxml = "^5.2.2"
beautifulsoup4 = "^4.12.3"
html5lib = "^1.1"
openpyxl = "^3.1.4"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
seaborn = "^0.13.2"
scipy = "^1.13.1"
statsmodels = "^0.14.2"
patsy = "^0.5.6"
scikit-learn = "^1.5.0"
pyarrow = "^15.0.2"
tables = "^3.9.2"
numba = "^0.60.0"

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
