[tool.poetry]
name = "ml-env"
version = "0.1.0"
description = ""
authors = ["Alex Chalk <contact@alexchalk.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
fastai = "*"
gradio = "*"
watchfiles = "*"
nbdev = "*"
numpy = "*"
ipykernel = "*"
ipywidgets = "*"
jupyterlab-rise = "*"
pandas = "*"
matplotlib = "*"
lxml = "*"
beautifulsoup4 = "*"
html5lib = "*"
openpyxl = "*"
requests = "*"
sqlalchemy = "*"
seaborn = "*"
scipy = "*"
statsmodels = "*"
patsy = "*"
scikit-learn = "*"
pyarrow = "*"
tables = "*"
numba = "*"
timm = "*"
fastkaggle = "*"
opencv-python = "*"
tensorflow = "*"
gast = "0.5.5"
torcheval = "*"
transformers = {version = "*", extras = ["torch"]}

[virtualenvs]
create = true
in-project = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 88
indent-width = 4
target-version = "py311"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
