[project]
name="ml_env"
version = "0.1.0"
description = ""
authors = [{ name = "Alex Chalk", email = "contact@alexchalk.net" }]
readme = "README.md"
requires-python=">=3.13"
dependencies = [
  "fastai",
  "gradio",
  "watchfiles",
  "nbdev",
  "numpy",
  "ipykernel",
  "ipywidgets",
  "jupyterlab-rise",
  "pandas",
  "matplotlib",
  "lxml",
  "beautifulsoup4",
  "html5lib",
  "openpyxl",
  "requests",
  "sqlalchemy",
  "seaborn",
  "scipy",
  "statsmodels",
  "patsy",
  "scikit-learn",
  "pyarrow",
  "tables",
  "numba",
  "timm",
  "fastkaggle",
  "opencv-python",
  "tensorflow",
  "gast",
  "torcheval",
  "transformers[torch]",
  "py7zr",
  "diffusers",
  "datasets",
  "accelerate",
  "einops",
  "wandb",
  "pytorch-fid",
]

[tool.uv.sources]
miniai = { path = "./miniai", editable = true }

[tool.uv.workspace]
members = ["miniai"]

[dependency-groups]
dev = [
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ml_env_wheel_dummy"]

[tool.ruff]
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".git-rewrite",
  ".hg",
  ".ipynb_checkpoints",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pyenv",
  ".pytest_cache",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  ".vscode",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "site-packages",
  "venv",
]

line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
ignore = []

fixable = ["ALL"]
unfixable = []
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
